DBZ-8346 Use DebeziumSinkRecord instead of Kafka Connect's SinkRecord inside Debezium sink connectors - pt.2 Switching to DebeziumSinkRecord instead of SinkRecord