@@ -23,7 +23,6 @@ import java.util.stream.IntStream;
 
 import org.apache.kafka.connect.data.Schema;
 import org.apache.kafka.connect.data.SchemaBuilder;
-import org.apache.kafka.connect.sink.SinkRecord;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -31,6 +30,7 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ArgumentsSource;
 
+import io.debezium.bindings.kafka.KafkaDebeziumSinkRecord;
 import io.debezium.connector.jdbc.dialect.DatabaseDialect;
 import io.debezium.connector.jdbc.junit.jupiter.SinkRecordFactoryArgumentsProvider;
 import io.debezium.connector.jdbc.type.Type;
@@ -60,13 +60,13 @@ class RecordBufferTest extends AbstractRecordBufferTest {
 
         RecordBuffer recordBuffer = new RecordBuffer(config);
 
-        List<SinkRecordDescriptor> sinkRecords = IntStream.range(0, 10)
+        List<JdbcSinkRecord> sinkRecords = IntStream.range(0, 10)
                 .mapToObj(i -> createRecordNoPkFields(factory, (byte) i, config))
                 .collect(Collectors.toList());
 
-        List<List<SinkRecordDescriptor>> batches = sinkRecords.stream().map(recordBuffer::add)
+        List<List<JdbcSinkRecord>> batches = sinkRecords.stream().map(recordBuffer::add)
                 .filter(not(List::isEmpty))
-                .collect(Collectors.toList());
+                .toList();
 
         assertThat(batches.size()).isEqualTo(2);
 
@@ -81,11 +81,11 @@ class RecordBufferTest extends AbstractRecordBufferTest {
 
         RecordBuffer recordBuffer = new RecordBuffer(config);
 
-        List<SinkRecordDescriptor> sinkRecords = IntStream.range(0, 3)
+        List<JdbcSinkRecord> sinkRecords = IntStream.range(0, 3)
                 .mapToObj(i -> createRecordNoPkFields(factory, (byte) i, config))
                 .collect(Collectors.toList());
 
-        SinkRecord sinkRecordWithDifferentKeySchema = factory.updateBuilder()
+        KafkaDebeziumSinkRecord sinkRecordWithDifferentKeySchema = factory.updateBuilder()
                 .name("prefix")
                 .topic("topic")
                 .keySchema(factory.keySchema(UnaryOperator.identity(), Schema.INT16_SCHEMA))
@@ -99,9 +99,9 @@ class RecordBufferTest extends AbstractRecordBufferTest {
 
         sinkRecords.add(createRecord(sinkRecordWithDifferentKeySchema, config));
 
-        List<List<SinkRecordDescriptor>> batches = sinkRecords.stream().map(recordBuffer::add)
+        List<List<JdbcSinkRecord>> batches = sinkRecords.stream().map(recordBuffer::add)
                 .filter(not(List::isEmpty))
-                .collect(Collectors.toList());
+                .toList();
 
         assertThat(batches.size()).isEqualTo(1);
 
@@ -116,11 +116,11 @@ class RecordBufferTest extends AbstractRecordBufferTest {
 
         RecordBuffer recordBuffer = new RecordBuffer(config);
 
-        List<SinkRecordDescriptor> sinkRecords = IntStream.range(0, 3)
+        List<JdbcSinkRecord> sinkRecords = IntStream.range(0, 3)
                 .mapToObj(i -> createRecordPkFieldId(factory, (byte) i, config))
                 .collect(Collectors.toList());
 
-        SinkRecord sinkRecordWithDifferentValueSchema = factory.updateBuilder()
+        KafkaDebeziumSinkRecord sinkRecordWithDifferentValueSchema = factory.updateBuilder()
                 .name("prefix")
                 .topic("topic")
                 .keySchema(factory.basicKeySchema())
@@ -134,9 +134,9 @@ class RecordBufferTest extends AbstractRecordBufferTest {
 
         sinkRecords.add(createRecord(sinkRecordWithDifferentValueSchema, config));
 
-        List<List<SinkRecordDescriptor>> batches = sinkRecords.stream().map(recordBuffer::add)
+        List<List<JdbcSinkRecord>> batches = sinkRecords.stream().map(recordBuffer::add)
                 .filter(not(List::isEmpty))
-                .collect(Collectors.toList());
+                .toList();
 
         assertThat(batches.size()).isEqualTo(1);
 
